added buttons, forms, get-started, navigations, typography and common.css file

--- a/get-started.html
+++ b/get-started.html
@@ -10,12 +10,12 @@
     <!-- common css -->
     <link rel="stylesheet" type="text/css" href="css/common.css">
 
-    <title>Hello, world!</title>
+    <title>Get Started</title>
   </head>
   <body>
     <div class="comming-soon" style="background:url('img/one.jpg');">
       <div class="first-header d-flex justify-content-center">
-        <h1>Dragon</h1>
+        <h1 class="display-4">Dragon</h1>
       </div>
       <div class="second-header text-center">
         <h2>Mobile Screens</h2>
