--- a/navigation.html
+++ b/navigation.html
@@ -12,7 +12,7 @@
     <!-- material icons cdn -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <title>Buttons</title>
+    <title>Navigations</title>
   </head>
   <body>
 
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow">
             <ul class="nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#"> <i class="material-icons">menu</i> <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#"> <i class="material-icons">menu</i>  </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Navigation</a>
@@ -30,8 +30,128 @@
     <!-- end navbar -->
     <div class="container-fluid">
         <div class="navigation mt-2">
-            
-            
+            <!-- first nav -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#"> <i class="material-icons">menu</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Title</a>
+                  </li>
+               </ul>
+            </nav>
+            <!-- second nav -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#"> <i class="material-icons">keyboard_arrow_left</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Title</a>
+                  </li>
+               </ul>
+               <ul class="nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#"> <i class="material-icons">notifications_active</i> </a>
+                  </li>
+                   <li class="nav-item active">
+                    <a class="nav-link" href="#"> <i class="material-icons">search</i>  </a>
+                  </li>
+              </ul>
+            </nav>
+            <!-- third navbar -->
+            <nav class="navbar navbar-expand-lg    bg-primary sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">keyboard_arrow_left</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Title</a>
+                  </li>
+               </ul>
+               <ul class="nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">notification_important</i> </a>
+                  </li>
+                   <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">search</i>  </a>
+                  </li>
+              </ul>
+            </nav>
+            <!-- end third navbar -->
+            <!-- fourth navbar -->
+            <nav class="navbar navbar-expand-lg  bg-warning sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">keyboard_arrow_left</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Title</a>
+                  </li>
+               </ul>
+               <ul class="nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">notifications_active</i> </a>
+                  </li>
+                   <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">search</i>  </a>
+                  </li>
+              </ul>
+            </nav>
+            <!-- end fourth -->
+            <!-- fifth navbar -->
+            <nav class="navbar navbar-expand-lg  bg-danger sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">menu</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Title</a>
+                  </li>
+               </ul>
+               <ul class="nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">notifications</i> </a>
+                  </li>
+                   <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">search</i>  </a>
+                  </li>
+              </ul>
+            </nav>
+            <!-- end fifth navbar --> 
+            <!-- sixth navbar -->
+            <nav class="navbar navbar-expand-lg bg-info sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">menu</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Title</a>
+                  </li>
+               </ul>
+               <ul class="nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">notifications_active</i> </a>
+                  </li>
+                   <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">person_pin</i>  </a>
+                  </li>
+              </ul>
+            </nav>
+            <!-- end sixth navbar -->
+             <!-- seventth navbar -->
+            <nav class="navbar navbar-expand-lg bg-dark sticky-top shadow">
+                <ul class="nav">
+                  <li class="nav-item active">
+                    <a class="nav-link text-white" href="#"> <i class="material-icons">arrow_back</i>  </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Title</a>
+                  </li>
+               </ul>
+            </nav>
+            <!-- end seventth navbar -->
         </div>
     </div>
 
